# SUtils

./: .gitignore  CMakeLists.txt
cmake/Modules/: FindOpenMesh.cmake
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/3DWindow/: CMakeLists.txt  hwindow.h  main.cpp
src/apps/DeformationGradient/: CMakeLists.txt  main.cpp
src/apps/ProfilerTimer/: CMakeLists.txt  main.cpp
src/apps/RefineTriMesh/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  boundingvolumesaspect.cpp  boundingvolumesaspect.h  cadmaterial.cpp  cadmaterial.h  mainwindow.cpp  mainwindow.h  objectivefunction.cpp  objectivefunction.h  objectivefunctionminimizer.cpp  objectivefunctionminimizer.h  openglwindow.cpp  openglwindow.h  profilertimer.cpp  profilertimer.h  resources.qrc  simulationwindow.cpp  simulationwindow.h  simulator.cpp  simulator.h  trackballcameracontroller.cpp  trackballcameracontroller.h  trackballcameracontroller_p.h  trackballhelper.h  trimesh.cpp  trimesh.h  wireframematerial.cpp  wireframematerial.h
src/core/geometry/gnomon/: gnomon.gltf
src/core/shaders/: phong.geom
src/shaders/: robustwireframe.frag
